Fix all javascript, images tag, stylesheets

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -66,7 +66,7 @@ This files table contents are outlined below>>>>>
 /*================================================
 Default CSS
 =================================================*/
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
+
 body {
   padding: 0;
   margin: 0;
@@ -1482,7 +1482,7 @@ Main Banner Area CSS
   position: relative;
   z-index: 1;
   background-color: #ffffff;
-  background-image: url(../../assets/img/main-banner/bg.png);
+  background-image: url(main-banner/bg.png);
   background-position: bottom center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1649,7 +1649,7 @@ Main Banner Area CSS
   position: relative;
   z-index: 1;
   background-color: #ffffff;
-  background-image: url(../../assets/img/main-banner/bg2.png);
+  background-image: url(main-banner/bg2.png);
   background-position: bottom right;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1921,7 +1921,7 @@ Main Banner Area CSS
   position: relative;
   z-index: 1;
   background-color: #ffffff;
-  background-image: url(../../assets/img/main-banner/bg3.png);
+  background-image: url(main-banner/bg3.png);
   background-position: bottom center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1966,11 +1966,11 @@ Main Banner Area CSS
 }
 
 .main-banner-item.item-bg1 {
-  background-image: url(../../assets/img/main-banner/main-banner1.jpg);
+  background-image: url(main-banner/main-banner1.jpg);
 }
 
 .main-banner-item.item-bg2 {
-  background-image: url(../../assets/img/main-banner/main-banner2.jpg);
+  background-image: url(main-banner/main-banner2.jpg);
 }
 
 .banner-item-content {
@@ -2119,7 +2119,7 @@ Main Banner Area CSS
   position: relative;
   z-index: 1;
   background-color: #ffffff;
-  background-image: url(../../assets/img/main-banner/bg4.jpg);
+  background-image: url(main-banner/bg4.jpg);
   background-position: bottom right;
   background-size: cover;
   background-repeat: no-repeat;
@@ -2289,7 +2289,7 @@ Main Banner Area CSS
   position: relative;
   z-index: 1;
   background-color: #ffffff;
-  background-image: url(../../assets/img/banner-bg.png);
+  background-image: url(banner-bg.png);
   background-position: bottom center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -2304,7 +2304,7 @@ Main Banner Area CSS
 .seo-agency-banner {
   position: relative;
   z-index: 1;
-  background: transparent url(../../assets/img/banner-bg2.jpg) left top no-repeat;
+  background: transparent url(banner-bg2.jpg) left top no-repeat;
   padding-top: 270px;
   padding-bottom: 150px;
 }
@@ -3086,7 +3086,7 @@ Funfacts Area CSS
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../../assets/img/funfacts/bg.jpg);
+  background-image: url(funfacts/bg.jpg);
 }
 
 .funfacts-area.bg-image .single-funfacts-item h3 {
@@ -5631,7 +5631,7 @@ Projects Area CSS
 }
 
 .projects-area.bg-color {
-  background-image: url(../../assets/img/black-bg.jpg);
+  background-image: url(black-bg.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -6063,7 +6063,7 @@ Scientist Area CSS
   -webkit-transition: 0.5s;
   transition: 0.5s;
   border-radius: 5px 5px 0 0;
-  background-image: url(../../assets/img/scientist/shape1.png);
+  background-image: url(scientist/shape1.png);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -6126,7 +6126,7 @@ Scientist Area CSS
 }
 
 .col-lg-3:nth-child(2) .single-scientist-box .image::before, .col-lg-3:nth-child(4) .single-scientist-box .image::before, .col-lg-3:nth-child(6) .single-scientist-box .image::before, .col-lg-3:nth-child(8) .single-scientist-box .image::before, .col-lg-3:nth-child(10) .single-scientist-box .image::before {
-  background-image: url(../../assets/img/scientist/shape2.png);
+  background-image: url(scientist/shape2.png);
 }
 
 .scientist-section-title .sub-title {
@@ -9758,7 +9758,7 @@ Blog Details Area CSS
   height: 115px;
   border-radius: 5px 5px 0 0;
   background-color: #ff5d22;
-  background-image: url(../../assets/img/bg.jpg);
+  background-image: url(bg.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -10420,7 +10420,7 @@ Page Title Area CSS
 .page-title-area {
   position: relative;
   z-index: 1;
-  background: transparent url(../../assets/img/page-title-bg.jpg) right top no-repeat;
+  background: transparent url(page-title-bg.jpg) right top no-repeat;
   padding-top: 200px;
   padding-bottom: 100px;
 }
@@ -10738,15 +10738,15 @@ Widget Sidebar CSS
 }
 
 .widget-area .widget_tracer_posts_thumb .item .thumb .fullimage.bg1 {
-  background-image: url(../../assets/img/blog/img9.jpg);
+  background-image: url(blog/img9.jpg);
 }
 
 .widget-area .widget_tracer_posts_thumb .item .thumb .fullimage.bg2 {
-  background-image: url(../../assets/img/blog/img8.jpg);
+  background-image: url(blog/img8.jpg);
 }
 
 .widget-area .widget_tracer_posts_thumb .item .thumb .fullimage.bg3 {
-  background-image: url(../../assets/img/blog/img7.jpg);
+  background-image: url(blog/img7.jpg);
 }
 
 .widget-area .widget_tracer_posts_thumb .item .thumb::before, .widget-area .widget_tracer_posts_thumb .item .thumb::after {
@@ -10919,15 +10919,15 @@ Widget Sidebar CSS
 }
 
 .widget-area .widget_popular_products .item .thumb .fullimage.bg1 {
-  background-image: url(../../assets/img/products/img7.jpg);
+  background-image: url(products/img7.jpg);
 }
 
 .widget-area .widget_popular_products .item .thumb .fullimage.bg2 {
-  background-image: url(../../assets/img/products/img8.jpg);
+  background-image: url(products/img8.jpg);
 }
 
 .widget-area .widget_popular_products .item .thumb .fullimage.bg3 {
-  background-image: url(../../assets/img/products/img9.jpg);
+  background-image: url(products/img9.jpg);
 }
 
 .widget-area .widget_popular_products .item .thumb::before, .widget-area .widget_popular_products .item .thumb::after {
@@ -11056,15 +11056,15 @@ Widget Sidebar CSS
 }
 
 .widget-area .widget_recent_courses .item .thumb .fullimage.bg1 {
-  background-image: url(../../assets/img/courses/img1.jpg);
+  background-image: url(courses/img1.jpg);
 }
 
 .widget-area .widget_recent_courses .item .thumb .fullimage.bg2 {
-  background-image: url(../../assets/img/courses/img2.jpg);
+  background-image: url(courses/img2.jpg);
 }
 
 .widget-area .widget_recent_courses .item .thumb .fullimage.bg3 {
-  background-image: url(../../assets/img/courses/img3.jpg);
+  background-image: url(courses/img3.jpg);
 }
 
 .widget-area .widget_recent_courses .item .thumb::before, .widget-area .widget_recent_courses .item .thumb::after {
@@ -11397,7 +11397,7 @@ Coming Soon Area CSS
   position: relative;
   z-index: 1;
   background: #f6f7fb;
-  background-image: url(../../assets/img/coming-soon-bg.jpg);
+  background-image: url(coming-soon-bg.jpg);
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
