--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -3,31 +3,31 @@ footer.footer-area.bg-color
     .row
       .col-lg-4.col-md-6.col-sm-6
         .single-footer-widget
-          a.logo href="index.html" 
+          a.logo href="/" 
             = image_tag("logo.png", width: "80")
           p Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse.
           ul.social-link
             li
-              a.d-block href="https://www.facebook.com/squadminds" target="_blank" 
+              a.d-block href="https://www.facebook.com/squadminds" rel="nofollow" target="_blank" 
                 i.bx.bxl-facebook
             li
-              a.d-block href="#" target="_blank" 
+              a.d-block href="https://www.upwork.com/ag/squadminds/" rel="nofollow" target="_blank" 
                 i.bx.bxl-upwork
             li
-              a.d-block href="https://in.linkedin.com/company/squadmindspvtltd" target="_blank" 
+              a.d-block href="https://in.linkedin.com/company/squadmindspvtltd" rel="nofollow" target="_blank" 
                 i.bx.bxl-linkedin
       .col-lg-4.col-md-6.col-sm-6
         .single-footer-widget.pl-5
           h3 Explore
           ul.footer-links-list
             li
-              a href="index.html"  Home
+              a href="/"  Home
             li
-              a href="about-us-1.html"  About
+              a href="/about-us" About
             li
-              a href="contact.html"  Portfolio
+              a href="/portfolio" Portfolio
             li
-              a href="contact.html"  Contact
+              a href="/contact-us" Contact
       .col-lg-4.col-md-6.col-sm-6
         .single-footer-widget
           h3 Address
@@ -37,7 +37,7 @@ footer.footer-area.bg-color
               | C-205, 5th Floor, Industrial Area, Sector 74, Sahibzada Ajit Singh Nagar, Punjab 140308
             li
               i.bx.bx-phone-call
-              a href="tel:+44587154756"  0172-3811040
+              a href="tel:01723811040" 0172-3811040
             li
               i.bx.bx-envelope
               a href="mailto:info@squadmindsinc.com"  info@squadmindsinc.com
