--- a/app/views/home/contact_us.html.slim
+++ b/app/views/home/contact_us.html.slim
@@ -45,8 +45,8 @@ section.contact-info-area.pt-100.pb-70
           .icon
             i.bx.bx-time-five
           h3 Hours of Operation
-          p Monday - Friday: 09:00 - 20:00
-          p Sunday & Saturday: 10:30 - 22:00
+          p Monday - Friday: 09:00 - 18.30
+          p Sunday & Saturday: Off
 /! End Contact Info Area
 /! Start Contact Area
 section.contact-area.pb-100
