image on contact page and add animation

--- a/app/views/home/contact_us.html.slim
+++ b/app/views/home/contact_us.html.slim
@@ -61,7 +61,7 @@ section.contact-area.pb-100
       p Your email address will not be published. Required fields are marked *
     .row
       .col-lg-6.col-md-12
-        .contact-image data-tilt=""
+        .contact-image{data-tilt=""}
           = image_tag("contact.png", alt: "image")
       .col-lg-6.col-md-12
         .contact-form
